# Fortuna

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/imgui/: CMakeLists.txt
Fortuna/: CMakeLists.txt
Fortuna/Shaders/: shader.vert
Fortuna/src/Core/: App.cpp  App.h  EntryPoint.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Fortuna/src/Core/Scenes/: EditorScene.cpp  EditorScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h
Fortuna/src/Game/: Phase.h  Player.h  Question.h  Slot.h  SpinResult.h  Wheel.cpp  Wheel.h
Fortuna/src/Platform/: GUI.cpp  GUI.h  Window.cpp  Window.h
Fortuna/src/Renderer/: Backend.h  Renderer.h
Fortuna/src/Renderer/OpenGL/: RendererOpenGL.cpp  RendererOpenGL.h  ShaderProgram.cpp  ShaderProgram.h
src/Core/: App.cpp  App.h  EntryPoint.cpp  Log.h
src/Platform/: GUI.cpp  GUI.h  Window.cpp  Window.h
src/Renderer/: Renderer.h
src/Renderer/OpenGL/: RendererOpenGL.h
